--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
 }
 
 .carte {
-    background-color: white;
+    background-color: rgb(11, 97, 209);
     width: 220px;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.2);
@@ -72,8 +72,9 @@ h1 {
 .rouge { background-color: #e74c3c; }
 .bleu { background-color: #3498db; }
 .vert { background-color: #2ecc71; }
+.violet { background-color: #870aad; }
 .noir { background-color: #2c3e50; }
-.blanc {
-    background-color: #ecf0f1;
+.jaune {
+    background-color: #c5b207;
     color: #333;
 }
